# repowise

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: CHANGELOG.md  LANGUAGE_SUPPORT.md  architecture-guide.md  critical-analysis.md  deep-dives-guide.md  graph-algorithms-guide.md
docs/architecture/: ARCHITECTURE.md
tests/fixtures/sample_repo/csharp_pkg/: Calculator.cs  Models.cs
tests/fixtures/sample_repo/kotlin_pkg/: Calculator.kt  Models.kt
tests/fixtures/sample_repo/php_pkg/: Calculator.php  Models.php
tests/fixtures/sample_repo/ruby_pkg/: calculator.rb  models.rb
tests/fixtures/sample_repo/scala_pkg/: Calculator.scala  Models.scala
tests/fixtures/sample_repo/swift_pkg/: Calculator.swift  Models.swift
tests/integration/: test_cli.py  test_ingest_sample_repo.py
tests/providers/: test_mock_provider.py  test_rate_limiter.py
tests/unit/: test_dead_code.py
tests/unit/cli/: test_commands.py  test_helpers.py
tests/unit/ingestion/: test_graph.py  test_parser.py
tests/unit/persistence/: test_models.py
tests/unit/server/: conftest.py  test_git.py  test_mcp.py  test_repos.py
website/: _config.yml  claude-code-plugin.md  claude-md-generator.md  cli-reference.md  concepts.md  configuration.md  contributing.md  getting-started.md  index.md  mcp-server.md  self-hosting.md  web-dashboard.md
